completed task 1 : to log input in console

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,8 @@
   <h1>
     Welcome to {{ title }}!
   </h1>
+  <h4>Each task is performed in its own module</h4>
 </div>
 
+<app-task-one></app-task-one>
 <router-outlet></router-outlet>
