completed task 3: to display parent data in the child component

--- a/src/app/scenario2/task-two/task-two.component.html
+++ b/src/app/scenario2/task-two/task-two.component.html
@@ -5,7 +5,8 @@
     <p>Display the message in the view as user inserts the text</p>
 
     <section>
-        <input [(ngModel)]="userText" type="text">
+        <label for="inputBox">Enter Some Text Here: </label>
+        <input [(ngModel)]="userText" type="text" name="inputBox">
         <h4> {{userText}} </h4>
     </section>
 </div>
