--- a/src/app/scenario1/task-one/task-one.component.html
+++ b/src/app/scenario1/task-one/task-one.component.html
@@ -3,5 +3,6 @@
     <h3>Data Binding Task-1</h3>
     <h5>This is in Scenario1 Module</h5>
     <p>Logging User Message into the console</p>
-    <input [(ngModel)]="consoleMessage" type="text" (keyup)="logToConsole()">
+    <label for="inputBox">Enter Some Text Here: </label>
+    <input [(ngModel)]="consoleMessage" type="text" name="inputBox" (keyup)="logToConsole()">
 </div>
