completed task 4: displaying child data in parent component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,4 +12,5 @@
 <hr>
 <app-task-three-parent></app-task-three-parent>
 <hr>
+<app-task-four-parent></app-task-four-parent>
 <router-outlet></router-outlet>
