completed task 5: displaying data from an inner child

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,4 +13,7 @@
 <app-task-three-parent></app-task-three-parent>
 <hr>
 <app-task-four-parent></app-task-four-parent>
+<hr>
+<app-task5-parent></app-task5-parent>
+<hr>
 <router-outlet></router-outlet>
