minor correction in task-six-parent-component

--- a/src/app/scenario6/task-six-parent/task-six-parent.component.html
+++ b/src/app/scenario6/task-six-parent/task-six-parent.component.html
@@ -1,6 +1,7 @@
 
 <div class="main">
     <h3>Data Binding Task-6</h3>
+    <h5>This is in Scenario6 Module</h5>
     <p>Sibling Interaction using Decorators</p>
     <h5>I am getting this data from my child A and sending it to child B</h5>
     <h6> {{child1Message}} </h6>
