completed task 7: sibling interaction using services

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,4 +17,7 @@
 <app-task5-parent></app-task5-parent>
 <hr>
 <app-task-six-parent></app-task-six-parent>
+<hr>
+<app-task-seven-parent></app-task-seven-parent>
+<hr>
 <router-outlet></router-outlet>
