--- a/src/app/scenario5/task5-parent/task5-child/task5-g-child/task5-g-child.component.html
+++ b/src/app/scenario5/task5-parent/task5-child/task5-g-child/task5-g-child.component.html
@@ -3,4 +3,8 @@
     <h5>I am writing data to my grand-parent!!!</h5>
     <label for="inputBox">Enter Some Text Here: </label>
     <input [(ngModel)]="gChildMessage" (keyup)="typeToChild($event)" type="text" name="inputBox">
+
+    <p>Let's not take help of my parent to send message to my grand-parent here!!</p>
+    <label for="serviceInput">Enter Some Text Here: </label>
+    <input type="text" name="serviceInput" #grandMessage (keyup)="sendToGrand(grandMessage.value)">
 </div>
