--- a/src/app/scenario5/task5-parent/task5-parent.component.html
+++ b/src/app/scenario5/task5-parent/task5-parent.component.html
@@ -5,4 +5,7 @@
     <p>Displaying data from the component which is grand-child to me!</p>
     <h4> {{gChildMessage}} </h4>
     <app-task5-child (childEvent)="gChildMessage=$event"></app-task5-child>
+
+    <p>My grand-child wants to tell me something directly!!</p>
+    <h4> {{grandMessage}} </h4>
 </div>
